--- a/.github/workflows/download-report.yml
+++ b/.github/workflows/download-report.yml
@@ -4,28 +4,27 @@ on:
   workflow_dispatch:
 
 jobs:
-  run-download:
+  download:
     runs-on: ubuntu-latest
 
     steps:
-      - name: リポジトリをチェックアウト
+      - name: リポジトリをクローン
         uses: actions/checkout@v3
 
-      - name: Python をセットアップ
+      - name: Pythonをセットアップ
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
-      - name: 必要なライブラリをインストール
+      - name: 必要なパッケージをインストール
+        run: pip install selenium webdriver-manager
+
+      - name: cookies.pkl を復元
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          sudo apt-get update
-          sudo apt-get install -y chromium-browser
+          echo "${{ secrets.CCDAY_COOKIES_B64 }}" | base64 -d > cookies.pkl
 
-      - name: 環境変数を渡してダウンロードスクリプト実行
+      - name: ダウンロードスクリプトを実行
         env:
           CCDAY_EMAIL: ${{ secrets.CCDAY_EMAIL }}
           CCDAY_PASSWORD: ${{ secrets.CCDAY_PASSWORD }}
-        run: |
-          python download_ccday.py
+        run: python download_ccday.py
